# roto

./: .gitignore  Makefile  README.md  baoding.db  bounce.db  common_utils.py  environment.yml  franka_find.db  frankafind.db  play.py  pyproject.toml  setup.py  shadow_baoding.db  shadow_bounce.db  sweep.py  train.py
assets/: franka.py  shadow_hand.py
plotting/: mi_estimation.py  plot.py  plot_dicts.py  plot_dicts_paper.py  plot_group.py
results/cam_ready/baoding/pt/: events.out.tfevents.1758551487.elle-lab.2446057.0  events.out.tfevents.1758559808.elle-lab.2502640.0
results/cam_ready/baoding/tac_recon/: events.out.tfevents.1759674397.agents5.2716879.0  events.out.tfevents.1759680221.agents5.2568898.0  events.out.tfevents.1759686254.agents5.402948.0
results/cam_ready/bounce/pt/: events.out.tfevents.1758464342.elle-lab.1682469.0  events.out.tfevents.1758498857.elle-lab.2004598.0
roto/assets/: franka.py  shadow_hand.py
roto/tasks/: roto_env.py
roto/tasks/franka/: __init__.py  find.py  franka.py
roto/tasks/shadow/: __init__.py  baoding.py  bounce.py  shadow.py
scripts/: baoding.sh  baoding_tac_recon.sh  bounce.sh  common_utils.py  find.sh  play.py  sweep.py  train.py
scripts/slurm_scripts/: example.sh
slurm_scripts/: example.sh
tasks/: roto_env.py
tasks/franka/: __init__.py  find.py  franka.py  lift.py  touch.py
tasks/franka/agents/: lift.yaml
tasks/shadow/: __init__.py  baoding.py  bounce.py  inhand.py  shadow.py  shadow_hand_env_cfg.py
tasks/template/: __init__.py  my_robot.py  my_task.py
tasks/template/agents/: ppo.yaml
(+108 files in other folders)
