[build-system]
requires = ["setuptools", "toml"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
py_version = 310
group_by_package = true

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "ISAACLABPARTY",
    "LOCALFOLDER",
]
extra_standard_library = [
    "numpy",
    "h5py",
    "open3d",
    "torch",
    "tensordict",
    "bpy",
    "matplotlib",
    "gymnasium",
    "gym",
    "scipy",
    "hid",
    "yaml",
    "prettytable",
    "toml",
    "trimesh",
    "tqdm",
]
known_thirdparty = [
    "omni.isaac.core",
    "omni.replicator.isaac",
    "omni.replicator.core",
    "pxr",
    "omni.kit.*",
    "warp",
    "carb",
]
known_isaaclabparty = [
    "omni.isaac.lab",
    "omni.isaac.lab_tasks",
    "omni.isaac.lab_assets"
]

# Modify the following to include the package names of your first-party code
known_firstparty = "multimodal_gym"

